A little more Java progress - mostly functional!